# Bitcoin-Cash-Node

./: .arclint  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  README.md
cmake/modules/: FindBerkeleyDB.cmake  FindEvent.cmake  FindGMP.cmake  FindNATPMP.cmake  NSIS.template.in
cmake/utils/: gen-doc-md.sh.in
contrib/: gitian-build.py
contrib/bench/: README.md  bench_bisect.sh  bench_compare_branch.sh  bench_par_validation.sh  benchmark_diff.py
contrib/buildenv/: Dockerfile  README.md  build-container.sh
contrib/devtools/: CMakeLists.txt  circular-dependencies.py  copyright_header.py  copyright_headers_update_or_insert.sh  poll_broadcast_txn.py  security-check.py  symbol-check.py
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx.yml  gitian-win.yml
contrib/gitian-signing/: pubkeys.txt
contrib/linearize/: README.md  example-linearize.cfg  linearize-data.py
contrib/seeds/: generate-seeds.py  makeseeds.py  nodes_chipnet.txt  nodes_main.txt  nodes_testnet3.txt  nodes_testnet4.txt
contrib/testgen/: validate_nbits_aserti3_2d.py
depends/: Makefile  README.md  config.site.in
doc/: CMakeLists.txt  README.md  bch-upgrades.md  bigint-script-property-tests.md  bips.md  bitcoin-conf.md  build-freebsd.md  build-osx.md  build-unix-alpine.md  build-unix-arch.md  build-unix-deb.md  build-unix-rpm.md  build-unix.md  build-windows.md  dependencies.md  developer-notes.md  dsproof-implementation-notes.md  functional-tests.md  gitian-signing.md  libauth-test-reasons.md  mkdocs.yml.in  publishing-documentation.md  release-notes.md  test-networks.md  tor.md  xversionmessage.md
doc/gitian-building/: gitian-building-setup-gitian-debian.md
doc/release-notes/: release-notes-24.1.0.md  release-notes-25.0.0.md  release-notes-26.1.0.md  release-notes-28.0.0.md  release-notes-28.0.1.md
share/examples/: bitcoin.conf
share/qt/: Info.plist.cmake.in
src/: CMakeLists.txt  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  attributes.h  banman.cpp  banman.h  base58.cpp  base58.h  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoin-wallet.cpp  bitcoind.cpp  blockencodings.cpp  blockencodings.h  blockfileinfo.h  blockfilter.cpp  blockfilter.h  blockindexworkcomparator.h  blockstatus.h  blockvalidity.h  bloom.cpp  bloom.h  cashaddr.cpp  cashaddr.h  cashaddrenc.cpp  cashaddrenc.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsconstants.h  chainparamsseeds.h  (+121 more)
src/bench/: CMakeLists.txt  addrman.cpp  banman.cpp  base58.cpp  bench.cpp  bench.h  bench_bitcoin.cpp  block_assemble.cpp  blockdata.cpp  blockdata.h  cashaddr.cpp  ccoins_caching.cpp  chained_tx.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_aes.cpp  crypto_hash.cpp  data.h  disconnectpool.cpp  dsproof.cpp  duplicate_inputs.cpp  examples.cpp  gcs_filter.cpp  json.cpp  json_util.cpp  json_util.h  keypool.cpp  libauth_bench.cpp  libauth_bench.h  lockedpool.cpp  mempool_eviction.cpp  merkle_root.cpp  net_messages.cpp  prevector.cpp  removeforblock.cpp  rollingbloom.cpp  rpc_blockchain.cpp  rpc_mempool.cpp  util_string.cpp  (+2 more)
src/compat/: assumptions.h  byteswap.h  cpuid.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  setenv.h  strnlen.cpp
src/config/: CMakeLists.txt  bitcoin-config.h.cmake.in
src/consensus/: abla.cpp  abla.h  activation.cpp  activation.h  consensus.h  merkle.cpp  merkle.h  params.h  tokens.cpp  tokens.h  tx_check.cpp  tx_check.h  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: CMakeLists.txt  hmac_sha256.h  hmac_sha512.h  muhash.cpp  muhash.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/dsproof/: dspid.h  dsproof.cpp  dsproof.h  dsproof_create.cpp  dsproof_validate.cpp  storage.cpp  storage.h  storage_cleanup.cpp
src/index/: base.cpp  base.h  coinstatsindex.cpp  coinstatsindex.h  txindex.cpp  txindex.h
src/interfaces/: chain.cpp  chain.h  handler.cpp  handler.h  node.cpp  node.h  wallet.cpp  wallet.h
src/leveldb/: CMakeLists.txt
src/node/: blockstorage.cpp  blockstorage.h  context.h  transaction.cpp  transaction.h
src/policy/: fees.h  mempool.h  policy.cpp  policy.h
src/primitives/: block.cpp  block.h  blockhash.h  token.cpp  token.h  txid.h  (+2 more)
src/test/: CMakeLists.txt  abla_basic_tests.cpp  abla_test_vectors.cpp  activation_tests.cpp  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bigint_script_property_tests.cpp  bigint_tests.cpp  bip32_tests.cpp  bip69_tests.cpp  bitmanip_tests.cpp  blockchain_tests.cpp  blockcheck_tests.cpp  blockencodings_tests.cpp  blockindex_tests.cpp  blockstatus_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  cashaddr_tests.cpp  cashaddrenc_tests.cpp  check_assert.cpp  check_assert.h  checkdatasig_tests.cpp  checkpoints_tests.cpp  checkqueue_tests.cpp  chip_testing_setup.cpp  chip_testing_setup.h  coins_tests.cpp  compress_tests.cpp  config_tests.cpp  core_io_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  denialofservice_tests.cpp  (+86 more)
src/test/data/: expected_test_fail_reasons.json  generate_abla_test_vectors.py  generate_asmap.py  generate_chip_test_vectors.py  generate_header.py  generate_header_and_cpp.py  generate_libauth_test_vectors.py  key_io_invalid.json  key_io_valid.json  libauth_expected_test_fail_reasons.json  script_tests.json  sighash.json
src/test/data/CHIPs/: README.md
src/test/data/abla_test_vectors/: config1-test4-lookahead-0.json  config1-test4-lookahead-4.json
src/test/data/libauth_test_vectors/: README.md  bch_vmb_tests_2023_nonstandard_scriptonly.json  bch_vmb_tests_2023_standard_scriptonly.json
src/test/data/libauth_test_vectors/CHIPs/: README.md
src/test/fuzz/: CMakeLists.txt  FuzzedDataProvider.h  bloom_filter.cpp  deserialize.cpp  fuzz.cpp  fuzz.h  partially_downloaded_block.cpp  rolling_bloom_filter.cpp  script_flags.cpp  txrequest.cpp  util.h
src/test/fuzz/util/: mempool.cpp  mempool.h
src/test/lib/: transaction_utils.cpp  transaction_utils.h
test/: CMakeLists.txt
(+400 files in other folders)
